--- a/src/lib/chemistry/qc/psi/mpqcpsi.dox
+++ b/src/lib/chemistry/qc/psi/mpqcpsi.dox
@@ -277,11 +277,6 @@ mpqc: (
       basis = $:basis
       memory = 32000000
     )
-    hessian<FinDispMolecularHessian>: (
-      point_group<PointGroup>: symmetry = C2V
-      checkpoint = no
-      restart = no
-    )
   )
   optimize = yes
   \% optimizer object for the molecular geometry
@@ -295,9 +290,15 @@ mpqc: (
     )
   )
 \% vibrational frequency input
+  do_freq = true
   freq<MolecularFrequencies>: (
     point_group<PointGroup>: symmetry = C2V
     molecule = $:molecule
+  )
+  hess<FinDispMolecularHessian>: (
+    point_group<PointGroup>: symmetry = C2V
+    checkpoint = no
+    restart = no
   )
 )
 </pre>
